add swagger description cart handler
